force-app/main/default/objects/AddressMaster__c/AddressMaster__c.object-meta.xml
<CustomObject>
    <label>住所マスタ</label>
    <nameField>
        <label>住所マスタ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>