force-app/main/default/objects/AddressMaster__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>漢字市区群名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>