force-app/main/default/objects/AddressMaster__c/fields/City_Kana__c.field-meta.xml
<CustomField>
    <fullName>City_Kana__c</fullName>
    <label>カナ市区群名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>