force-app/main/default/objects/AddressMaster__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>漢字都道府県名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>