force-app/main/default/objects/AddressMaster__c/fields/State_Kana__c.field-meta.xml
<CustomField>
    <fullName>State_Kana__c</fullName>
    <label>カナ都道府県名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>