force-app/main/default/objects/AddressMaster__c/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <label>漢字町村以下名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>