force-app/main/default/objects/AddressMaster__c/fields/Town_Kana__c.field-meta.xml
<CustomField>
    <fullName>Town_Kana__c</fullName>
    <label>カナ町村以下名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>