force-app/main/default/objects/AddressMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PostalCode__c</columns>
    <columns>State_Kana__c</columns>
    <columns>City_Kana__c</columns>
    <columns>Town_Kana__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>Town__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>